setting up migration

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://root:secret@localhost:5432/personal_budget?sslmode=disable
-MIGRATION_URL=file://db/migration
+DB_SOURCE=postgresql://admin:password@localhost:5432/personal_budget?sslmode=disable
+MIGRATION_URL=file://migration
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012    
 ACCESS_TOKEN_DURATION=25m
