migration is now running via file

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://admin:password@localhost:5432/personal_budget?sslmode=disable
+DB_SOURCE=postgresql://admin:password@localhost:5432/personal-budget?sslmode=disable
 MIGRATION_URL=file://migration
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012    
@@ -9,3 +9,6 @@ ENVIRONMENT=development
 EMAIL_SENDER_NAME=Personal Budget
 EMAIL_SENDER_ADDRESS=personalbudget@gmail.com
 EMAIL_SENDER_PASSWORD=jekfcygyenvzekke
+
+
+
