--- a/.env
+++ b/.env
@@ -9,6 +9,8 @@ ENVIRONMENT=development
 EMAIL_SENDER_NAME=Personal Budget
 EMAIL_SENDER_ADDRESS=personalbudget@gmail.com
 EMAIL_SENDER_PASSWORD=jekfcygyenvzekke
+PAYSTACK_KEY=sk_test_0ac55e6a046da4a777a58c05e94cc273245f98d0
+PAYSTACK_BASE_URL=https://api.paystack.co
 
 
 
